--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# files without extension
+*
+!*/
+!*.*
+
 # Prerequisites
 *.d
 
@@ -30,3 +35,11 @@
 *.exe
 *.out
 *.app
+
+
+# Visual Studio Code Configs
+.vscode/
+
+# GNU plot files
+*.plt
+*.gnu
